# qwen-weekday-rpn

./: .gitignore  README.md  pyproject.toml  rpn_search.py  run.py
configs/: default.yaml
docs/: architecture.md
src/rpn_search/: __init__.py  checker.py  cli.py  evaluator.py  formatter.py  generator.py  tokens.py  validator.py
tests/: test_checker.py  test_evaluator.py  test_generator.py  test_validator.py
